--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,77 @@
 </head>
 
 <body>
+<div class="wrap">
+    <svg class="wrap-sun" enable-background="new 0 0 1080 1080" version="1.1" viewBox="0 0 637.4 652.19" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <defs>
+            <clipPath id="SVGID_9_">
+                <use width="100%" height="100%" overflow="visible" xlink:href="#SVGID_8_"/>
+            </clipPath>
+            <linearGradient id="SVGID_10_" x1=".00048828" x2="1.0005" y1="1080" y2="1080" gradientTransform="matrix(318.01 0 0 -318.01 86.02 343804)" gradientUnits="userSpaceOnUse">
+                <stop stop-color="#FB8217" offset="0"/>
+                <stop stop-color="#FB8217" offset=".101"/>
+                <stop stop-color="#EFFF93" offset=".9901"/>
+                <stop stop-color="#EFFF93" offset="1"/>
+            </linearGradient>
+        </defs>
+        <g transform="translate(-265.96,-190.28)">
+            <path d="m518.81 321.46c-139.62 0-252.8 113.18-252.8 252.8s113.18 252.8 252.8 252.8 252.8-113.18 252.8-252.8-113.18-252.8-252.8-252.8" fill="#fc762b"/>
+            <rect x="351.15" y="486.18" width="334.02" height="197.62" clip-path="url(#SVGID_2_)" fill="#fff"/>
+            <path d="m668.14 583.43c0 97.661-79.17 176.83-176.83 176.83-97.661 0-176.83-79.171-176.83-176.83s79.17-176.83 176.83-176.83c97.662 0 176.83 79.171 176.83 176.83" fill="#fff"/>
+            <g fill="#fc762b">
+                <polyline points="497.08 340.33 445.57 304.82 477.85 275.5 423.19 201.18 437.36 264.65 405.58 302.23 453.36 351.66" clip-path="url(#SVGID_2_)"/>
+                <polyline points="570.91 345.46 552.12 285.79 595.6 282.5 598.18 190.28 570.34 249.05 522.17 259.16 529.46 327.52" clip-path="url(#SVGID_2_)"/>
+                <polyline points="654.2 380.62 663.3 318.72 703.86 334.73 746.4 252.86 695.72 293.61 647.96 281.7 624.72 346.4" clip-path="url(#SVGID_2_)"/>
+                <path d="m713.58 433.4 40.652-47.55 25.818 35.134 79.587-46.666-64.597 7.523-34.095-35.499c-13.47 10.549-40.643 31.84-54.107 42.397-3.558 2.791-22.277 17.473-25.836 20.265" clip-path="url(#SVGID_2_)"/>
+                <polyline points="746.67 517.9 798.88 483.42 813.98 524.32 903.36 501.45 839.2 490.84 816.24 447.3 752.52 473.11" clip-path="url(#SVGID_2_)"/>
+                <polyline points="747.91 605.65 807.64 587.04 810.78 630.53 903 633.4 844.31 605.38 834.35 557.17 765.98 564.26" clip-path="url(#SVGID_2_)"/>
+                <polyline points="728.88 692.48 790.57 682.07 787.84 725.58 878.83 740.83 824.45 705.17 821.06 656.06 752.35 653.89" clip-path="url(#SVGID_2_)"/>
+                <polyline points="669.71 759.35 732.09 764.14 718.94 805.71 803.56 842.47 759.39 794.74 767.96 746.27 701.81 727.57" clip-path="url(#SVGID_2_)"/>
+            </g>
+            <rect x="630.15" y="510.08" width="32.746" height="32.747" clip-path="url(#SVGID_2_)" fill="#fff"/>
+        </g>
+        <g transform="translate(-265.96 -190.28)">
+            <defs>
+                <path id="SVGID_3_" d="m266.01 571.64c-0.91 47.062 11.85 83.913 20.959 104.79 127.49 0.08 254.99 0.16 382.48 0.238v-181.24c-129.68-0.794-259.35-1.587-389.03-2.38-6.577 18.472-13.768 45.483-14.409 78.59"/>
+            </defs>
+            <clipPath id="SVGID_4_">
+                <use width="100%" height="100%" overflow="visible" xlink:href="#SVGID_3_"/>
+            </clipPath>
+            <linearGradient id="SVGID_5_" x2="1" y1="1080" y2="1080" gradientTransform="matrix(403.48 0 0 -403.48 265.92 436348)" gradientUnits="userSpaceOnUse">
+                <stop stop-color="#FC762B" offset="0"/>
+                <stop stop-color="#FC762B" offset=".0743"/>
+                <stop stop-color="#FC762B" offset=".3094"/>
+                <stop stop-color="#FB8217" offset=".5862"/>
+                <stop stop-color="#FBAE17" offset="1"/>
+            </linearGradient>
+            <rect x="265.1" y="493.05" width="404.35" height="183.62" clip-path="url(#SVGID_4_)" fill="url(#SVGID_5_)"/>
+        </g>
+        <g transform="translate(-265.96 -190.28)">
+            <defs>
+                <rect id="SVGID_6_" width="1080" height="1080"/>
+            </defs>
+            <clipPath id="SVGID_7_">
+                <use width="100%" height="100%" overflow="visible" xlink:href="#SVGID_6_"/>
+            </clipPath>
+            <g fill="#f94a2d">
+                <polyline points="561.25 321.39 535.05 276.85 595.31 280.78 553.39 284.71 563.87 320.08" clip-path="url(#SVGID_7_)"/>
+                <polygon points="478.21 275.61 445.46 305.74 480.83 328.01 434.98 304.43" clip-path="url(#SVGID_7_)"/>
+                <polygon points="655.32 311.7 703.79 333.96 663.18 318.25 660.22 339.71" clip-path="url(#SVGID_7_)"/>
+                <polygon points="753.63 370.71 781.14 420.49 755.38 385.99 736.95 406.23" clip-path="url(#SVGID_7_)"/>
+                <polygon points="801.72 468.57 815.02 523.06 799.76 484.81 780.76 493.46" clip-path="url(#SVGID_7_)"/>
+                <polygon points="812.22 578.19 810.71 629.54 808.29 587.36 770.31 597.84" clip-path="url(#SVGID_7_)"/>
+                <polygon points="799.12 672.5 789.93 722.26 791.27 680.29 744.56 688.17" clip-path="url(#SVGID_7_)"/>
+            </g>
+        </g>
+        <path class="wrap-sun-circuit" d="m264.04 304.72v6.998c-58.996-0.16605-118-0.33199-177-0.49805l-2e-3 1c58.997 0.16606 118 0.332 177 0.49805v0.77539l11 7v8.2266h-33.498c-10.919-0.026-21.835-0.0391-32.752-0.0391s-21.834 0.0131-32.75 0.0391c-29.666 0.071-59.332 0.237-89.002 0.5l0.0098 1c29.668-0.263 59.332-0.429 88.996-0.5 10.915-0.026 21.83-0.0391 32.746-0.0391 10.749 0 21.501 0.0138 32.252 0.0391v8.9961c-21.333-0.23305-42.665-0.39887-63.996-0.4961-15.168-0.069-30.334-0.10547-45.502-0.10547s-30.336 0.0365-45.504 0.10547l0.0059 1c15.166-0.069 30.332-0.10547 45.498-0.10547 14.832 0 29.665 0.0355 44.498 0.10157v0.5039h65v9c-10.583-0.0262-21.167-0.041-31.75-0.041-10.75 0-21.502 0.014-32.252 0.041-28.332 0.072-56.666 0.238-85.002 0.5l0.0098 1c28.334-0.262 56.666-0.428 84.996-0.5 10.75-0.027 21.498-0.041 32.248-0.041s21.5 0.014 32.25 0.041h0.5v-20h118v12h-85v7.1738l-33.604 14.826c-12.715-0.0428-25.431-0.0645-38.146-0.0645-12.75 0-25.5 0.0215-38.252 0.0645-24.999 0.084-50.001 0.251-75.004 0.5l0.01172 1c25.001-0.249 49.999-0.416 74.996-0.5 12.75-0.043 25.5-0.0645 38.25-0.0645 12.584 0 25.166 0.0226 37.748 0.0645v18h1v-18.174l33.49-14.775 30.51 14.762v19.859l6.8086 8.752-67.158-0.42383-6e-3 1 158.35 1 6e-3 -1v-1h-90.256l-6.7441-8.6719v-19.328h97v-1h-97v0.18555l-31-15v-6.1856h128v-1h-43v-13h-85v-8.1914l11.998-5.998-2e-3 0.18945 116 1 0.01-1-116-1-6e-3 0.59961v-9.5996h-1v9.1895l-11.469 5.7363-10.531-6.7012v-0.22461l2e-3 -1h-2e-3v-7zm-50.932 79v7h-153.07v1h153.07v0.81641l15.016 7v8.1836h-45.229v1h161.26v12h-116.03v7.1328l-45.998 14.867h-104.34v1h103.93v18h1v-18.139l45.898-14.834 41.824 14.826v19.861l9.8574 9.2852h123.74l-4e-3 -1h-123.34l-9.2539-8.7148v-20.139l-42.312-15v-6.1465h174.91v-1h-58.881v-13h-116.03v-8.1504l16.381-6v-9.8496h-1v9.1484l-15.859 5.8106-14.537-6.7774v-0.18164h0.18164v-1h-0.18164v-7zm-120.3 24v1h88.912v9h-88.912v1h88.912v9h-87.549v1h88.549v-21zm178.82 35v1h132.41v-1z"/>
+        <g fill="#fff">
+            <text x="145.8286" y="458.0188" font-family="LemonMilk" font-size="89.071px">CSBC</text>
+            <text x="45.143997" y="384.55402" font-family="LemonMilk" font-size="75.972px">40</text>
+            <text x="147.8974" y="355.28741" font-family="MyriadPro-Regular" font-size="59.498px">º</text>
+        </g>
+    </svg>
 
-
+</div>
 </body>
 
 </html>
