Atualizado tempo de animação da logo

--- a/src/index.html
+++ b/src/index.html
@@ -51,9 +51,18 @@
          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 
         <defs>
+            <defs>
+                <rect id="SVGID_1_" width="1080" height="1080"/>
+            </defs>
+            <clipPath id="SVGID_2_">
+                <use xlink:href="#SVGID_1_" overflow="visible"/>
+            </clipPath>
+            <clipPath id="SVGID_4_">
+                <use width="101%" height="100%" overflow="visible" xlink:href="#SVGID_3_"/>
+            </clipPath>
             <!-- Fake pendrive with chip gradient, hehe -->
             <linearGradient id="SVGID_5_" x2="1" y1="1080" y2="1080"
-                            gradientTransform="matrix(403.48, 0, 0, -403.48, 265.92, 436348)"
+                            gradientTransform="matrix(403.48, 0, 0, -403.48, 265, 436348)"
                             gradientUnits="userSpaceOnUse">
                 <stop stop-color="#FC762B" offset="0"/>
                 <stop stop-color="#FC762B" offset=".0743"/>
@@ -70,13 +79,21 @@
                 <stop offset="1"/>
             </linearGradient>
 
-            <clipPath id="SVGID_4_">
-                <use width="100%" height="100%" overflow="visible" xlink:href="#SVGID_3_"/>
-            </clipPath>
-
             <clipPath id="SVGID_7_">
                 <use width="100%" height="100%" overflow="visible" xlink:href="#SVGID_6_"/>
             </clipPath>
+
+            <use xlink:href="#SVGID_8_"  overflow="visible"/>
+            <clipPath id="SVGID_9_">
+                <use xlink:href="#SVGID_8_"  overflow="visible"/>
+            </clipPath>
+
+            <linearGradient id="SVGID_11_" gradientUnits="userSpaceOnUse" x1="0" y1="1080.002" x2="1" y2="1080.002" gradientTransform="matrix(344.006 0 0 -344.006 326.0035 372145.25)">
+                <stop  offset="0" style="stop-color:#FB8217"/>
+                <stop  offset="0.101" style="stop-color:#FB8217"/>
+                <stop  offset="0.9901" style="stop-color:#EFFF93"/>
+                <stop  offset="1" style="stop-color:#EFFF93"/>
+            </linearGradient>
         </defs>
 
         <path d="m252.85 131.18c-139.62 0-252.8 113.18-252.8 252.8s113.18 252.8 252.8 252.8 252.8-113.18 252.8-252.8-113.18-252.8-252.8-252.8"
@@ -112,8 +129,8 @@
                       fill="#f6752a"/>
         </g>
 
-        <g transform="translate(-265.96,-190.28)">
-            <path id="SVGID_3_"
+        <g class="wrap-sun-chip" transform="translate(-265,-190)">
+            <path id="SVGID_3_" clip-path="url(#SVGID_4_)" fill="url(#SVGID_5_)"
                   d="m266.01 571.64c-0.91 47.062 11.85 83.913 20.959 104.79 127.49 0.08 254.99 0.16 382.48 0.238v-181.24c-129.68-0.794-259.35-1.587-389.03-2.38-6.577 18.472-13.768 45.483-14.409 78.59"/>
             <rect x="265.1" y="493.05" width="404.35" height="183.62" clip-path="url(#SVGID_4_)" fill="url(#SVGID_5_)"/>
             <path fill="url(#circuit_animated)" class="wrap-sun-circuit"
